--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título
@@ -27,6 +27,7 @@
                    estadísticamente no lo 
                    eres.... por ahora.
                 </p>
+                <p>Suscríbete y dale like</p>
         </div>        
         </div>
     </body>
